# yaourt-fem-dg

./: .gitmodules  CMakeLists.txt  README.md  blaze_sparse_init.hpp  cfem.hpp  continuous_fem.cpp  dataio.hpp  dg2d.cpp  dg2d_advection.cpp  dg2d_diffusion.cpp  dg2d_maxwell.hpp  ex1_geometry.cpp  ex2_quadrature.cpp  ex3_projection.cpp  fvol_conservation.cpp  hho_diffusion.cpp  maxwell_driver.cpp  mesh.hpp  point.hpp  quadrature.cpp  solvers.hpp  test_quad.cpp
core/: bases.hpp  blaze_sparse_init.hpp  dataio.hpp  mesh.hpp  meshers.hpp  point.hpp  quadratures.hpp  refelem.hpp  solvers.hpp
method_cfem/: cfem.hpp
methods/: cfem.hpp  dg.hpp  dg_maxwell_2D.hpp  hho.hpp
tests/: CMakeLists.txt  hho_opers.cpp  maxwell_refelem.cpp  quadratures.cpp  refelem.cpp
